47
================

15/05/23 Fix bug viewing/deleting document repo/report images with & in name
11/05/23 Map reports will now concatenate multiple columns to make easier SQL
11/05/23 Include email counts for send email/recipient list on mail merges #1266
10/05/23 Refactor CSV import rules, add ones for test/vacc/med
10/05/23 Mail merges will now count/send to EmailAddress2 if present #1266
09/05/23 Merge animal was reparenting additional person links with animal IDs
08/05/23 Allow users to choose their own quicklinks, inheriting from system #1072
06/05/23 Font preview on watermark options tab #1276
06/05/23 Fix missing indexes for ID Number fields
03/05/23 Support ANIMALDESCRIPTION when importing CSV #1273
01/05/23 Include couple email if set when emailing from person #1265
30/04/23 wordkeys: OriginalOwnerIDNumber/CurrentOwnerIDNumber/ReservedOwnerIDNumber
30/04/23 merge_person_details, include couple fields, optimise for single query
29/04/23 clone_from_template: if calculated date < today, use today
29/04/23 Validation for second email field #741
28/04/23 Merge new person fields/DOB/ID when merging details #1257
28/04/23 Fix bug in report SQL syntax checker when using CURRENT_DATE+/-
28/04/23 Add new person fields to wordprocessor tokens #1270
27/04/23 Ability to suffix report columns with N2BR to replace linebreaks
26/04/23 Person date of birth/id number fields #1257
24/04/23 Option to populate couple fields from online forms #1264
24/04/23 Check couple fields for similar when adding new people #741
23/04/23 Translate null ownertypes to individual #741
22/04/23 Attempt to remove incoming processed forms when browser window closes
21/04/23 Mobile interface, take photo and convert to PDF #929
20/04/23 Use configuration item to control name/couple format #741
20/04/23 Show count of records displayed in waiting list
20/04/23 Add location filter to photo uploader #1249
20/04/23 person_similar was checking incoming mobile against home, incorrectly