@@ -7,8 +7,8 @@ import time
 from asm3.locales import *
 
 
-VERSION = "47u [Thu 11 May 21:32:21 BST 2023]"
-BUILD = "05112132"
+VERSION = "47u [Tue 16 May 09:34:02 BST 2023]"
+BUILD = "05160934"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
